--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-SQLITE_DSN="sqlite:///sqlite3.db"
+SQLITE_DSN="sqlite3.db"
 
 AUTH_SECRET="222qwe"
 AUTH_ALGORITHM="HS256"
@@ -6,4 +6,8 @@ AUTH_TOKEN_TTL=86400
 
 PASSWORD_RESET_TOKEN_EXPIRE=3600
 
-FRONTEND_BASE_URL="http://localhost:3535"
+FRONTEND_BASE_URL="http://0.0.0.0:3535"
+
+NUMBER_OF_USERS=20
+MAX_POSTS_PER_USER=30
+MAX_LIKES_PER_USER=10
