--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,35 +53,35 @@ jobs:
       - name: Run pytest for unit test suite
         run: |
           python -m pytest tests/unit
-
-  functional_tests:
-    runs-on: ubuntu-latest
-    env:
-      SQLITE_DSN: "sqlite:///sqlite3.db"
-      AUTH_SECRET: "222qwe"
-      AUTH_TOKEN_TTL: 86400
-      AUTH_ALGORITHM: "HS256"
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python runtime
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run migrations
-        run: python -m alembic upgrade head
-      - name: Run pytest for functional test suite
-        run: |
-          python -m pytest tests/functional
+#
+#  functional_tests:
+#    runs-on: ubuntu-latest
+#    env:
+#      SQLITE_DSN: "sqlite:///sqlite3.db"
+#      AUTH_SECRET: "222qwe"
+#      AUTH_TOKEN_TTL: 86400
+#      AUTH_ALGORITHM: "HS256"
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python runtime
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.10'
+#      - uses: actions/cache@v2
+#        with:
+#          path: ~/.cache/pip
+#          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pip-
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+#      - name: Run migrations
+#        run: python -m alembic upgrade head
+#      - name: Run pytest for functional test suite
+#        run: |
+#          python -m pytest tests/functional
   linter:
     runs-on: ubuntu-latest
     steps:
